--- a/src/lifecycle-hook/app.component.html
+++ b/src/lifecycle-hook/app.component.html
@@ -2,10 +2,16 @@
 
 <h1>Component Lifecycle hooks</h1>
 <a href="#hooks">Peek-a-boo: (most) lifecycle hooks</a>
+<a href="#spy">Spy: directive with OnInit & OnDestroy</a>
 
 
 
 <a id="hooks"></a>
 <peek-a-boo-parent></peek-a-boo-parent>
+<br>
+<a href="#top">back to top</a>
+
+<a id="spy"></a>
+<spy-parent></spy-parent>
 <br>
 <a href="#top">back to top</a>
